fixed weird horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ html {
   height: 100%;
 	-webkit-overflow-scrolling: touch;
 	background-color: #000;
+	overflow-x:hidden;
 }
 
 *, *:before, *:after {
